[gd_scene load_steps=17 format=3 uid="uid://toqi11jj8cxx"]

[ext_resource type="Script" uid="uid://dm8wwsg0ws5h6" path="res://Scripts/big_locker.gd" id="1_jeuna"]
[ext_resource type="Texture2D" uid="uid://bqr3m2dgs6782" path="res://Placeholder Sprites/BigLocker.png" id="2_5sh4t"]
[ext_resource type="AudioStream" uid="uid://cveyrp6wk20as" path="res://audio/lockerSound.wav" id="3_eu4e0"]
[ext_resource type="AudioStream" uid="uid://dhf616uba0j5h" path="res://audio/Break Down Metal - SFX.wav" id="4_d2t2d"]
[ext_resource type="AudioStream" uid="uid://cdnbhhwygjxgi" path="res://audio/Line Locker Alright Lets Get Out of Here - SFX.wav" id="5_0ppen"]
[ext_resource type="AudioStream" uid="uid://cs2k1043bculj" path="res://audio/Line Locker Oh Look its Open - SFX.wav" id="6_hbeu6"]
[ext_resource type="AudioStream" uid="uid://dft7la56rrqp5" path="res://audio/Line Locker Finally Something Useful- SFX.wav" id="7_mhvfb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eu4e0"]
size = Vector2(40, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2t2d"]
atlas = ExtResource("2_5sh4t")
region = Rect2(0, 0, 32, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_obn8r"]
atlas = ExtResource("2_5sh4t")
region = Rect2(48, 0, 32, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ppen"]
atlas = ExtResource("2_5sh4t")
region = Rect2(96, 0, 32, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_hbeu6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2t2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obn8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ppen")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_jeuna"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5sh4t"]
gradient = SubResource("Gradient_jeuna")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="Gradient" id="Gradient_t2t4p"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jeuna"]
gradient = SubResource("Gradient_t2t4p")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="Big Locker" type="Area2D"]
collision_mask = 2
script = ExtResource("1_jeuna")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_eu4e0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hbeu6")
frame_progress = 0.0817208

[node name="HideLight" type="PointLight2D" parent="."]
visible = false
position = Vector2(0, -11)
texture = SubResource("GradientTexture2D_5sh4t")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -37.0
offset_top = -56.0
offset_right = 40.0
offset_bottom = -42.0
theme_override_font_sizes/font_size = 10
text = "Click to use tool"

[node name="PointLight2D" type="PointLight2D" parent="Label"]
position = Vector2(37, 7.5)
scale = Vector2(1.3125, 0.703125)
texture = SubResource("GradientTexture2D_jeuna")

[node name="Interact" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_eu4e0")

[node name="Breakdown" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_d2t2d")

[node name="LeaveVoice" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_0ppen")

[node name="HideVoice" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_hbeu6")

[node name="OpenVoice" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_mhvfb")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
